--- a/so_mrp/views/views.xml
+++ b/so_mrp/views/views.xml
@@ -29,14 +29,26 @@
     </record>
 
 
-    <!-- <record model="ir.ui.view" id="mrp_bom_form_view_inherit">
+    <record model="ir.ui.view" id="mrp_bom_form_view_inherit">
       <field name="name">mrp.bom.form</field>
       <field name="model">mrp.bom</field>
       <field name="inherit_id" ref="mrp.mrp_bom_form_view"/>
       <field name="arch" type="xml">
         <xpath expr="//field[@name='operation_id']" position="replace">
-          <field name="operation_id" widget="many2many_tags" groups="mrp.group_mrp_routings" domain="[('routing_id', '=', parent.routing_id)]" options="{'no_quick_create':True,'no_create_edit':True}"/>
+          <field name="new_operation_id" widget="many2many_tags" groups="mrp.group_mrp_routings" domain="[('routing_id', '=', parent.routing_id)]" options="{'no_quick_create':True,'no_create_edit':True}"/>
         </xpath>
-    </record> -->
+      </field>
+    </record>
+
+    <record model="ir.ui.view" id="mrp_bom_line_view_form_inherit">
+      <field name="name">mrp.bom.form.view.form</field>
+      <field name="model">mrp.bom.line</field>
+      <field name="inherit_id" ref="mrp.mrp_bom_line_view_form"/>
+      <field name="arch" type="xml">
+        <xpath expr="//field[@name='operation_id']" position="replace">
+          <field name="new_operation_id" groups="mrp.group_mrp_routings" widget="many2many_tags"/>
+        </xpath>
+      </field>
+    </record>
   </data>
 </odoo>
